# prior

./: .gitignore  LICENSE  README.md
editors/vscode/: .vscodeignore  README.md  extension.js  language-configuration.json  package.json
editors/vscode/data/: tags.json
editors/vscode/snippets/: prior.json
editors/vscode/syntaxes/: prior.tmLanguage.json
examples/: blowoff_fade.prior  bollinger_reversal.prior  breakout_regime_rider.prior  btc_squeeze_breakout.prior  bull_put_spread.prior  coiled_spring.prior  covered_calls_on_dips.prior  eth_oversold_recovery.prior  fade_both_tails.prior  gold_miners_ratio.prior  golden_cross.prior  iron_condor_month.prior  liquid_leaders.prior  low_vol_five.prior  macd_momentum.prior  mega_tech_capitulation.prior  monthly_sector_momentum.prior  nvda_dip.prior  oversold_bounce.prior  premium_when_rich.prior  quiet_tape_strangle.prior  sector_momentum_rotation.prior  semis_trend_rider.prior  twelve_one_momentum.prior  two_triggers.prior  weekly_regime_daily_dip.prior  wheel_on_ford.prior
examples/data/: README.md  sample_universe.csv
python/: MANIFEST.in  prior_lang_README.md  pyproject.toml
python/prior_lang/: __init__.py  backtest.py  cli.py  cloud.py  codegen.py  decompile.py  errors.py  explain.py  formatter.py  lexer.py  options_backtest.py  parser.py  plugins.py  samples.py  tags.py  trace.py
python/tests/: test_cli.py  test_cloud.py  test_cloud_tags.py  test_comments.py  test_decompile.py  test_deploy.py  test_dynamic_universe.py  test_editor_tooling.py  test_errors.py  test_examples.py  test_mtf.py  test_options.py  test_options_backtest.py  test_options_structures.py  test_options_structures_codegen.py  test_packaging.py  test_pairs.py  test_plugins.py  test_ranking.py  test_samples.py  test_supertrend.py  test_trace.py  test_trades.py  test_v03_tags.py  test_v06.py
python/tools/: gen_editor_tags.py
scripts/: generate_sample_data.py
spec/: SPEC.md  TAGS.md
