[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prior-lang"
version = "0.1.0"
description = "PRIOR — a tiny declarative language for trading strategies. Your hypothesis, written down."
readme = {text = "PRIOR compiles declarative strategy files to an open JSON interchange format and runnable Python. See https://github.com/autoquant/prior", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AutoQuant", email = "hello@autoquant.ai"}]
keywords = ["trading", "backtesting", "quant", "dsl", "strategies"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.setuptools.packages.find]
include = ["prior_lang*"]
