[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prior-lang"
version = "0.8.0"
description = "PRIOR — a tiny declarative language for trading strategies. Your hypothesis, written down."
readme = {file = "prior_lang_README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AutoQuant", email = "hello@autoquant.ai"}]
keywords = ["trading", "backtesting", "quant", "dsl", "strategies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://autoquant.ai/prior"
Repository = "https://github.com/prior-lang/prior"
Documentation = "https://autoquant.ai/prior/docs"

[project.optional-dependencies]
backtest = ["pandas>=2.0", "numpy>=1.24"]

[project.scripts]
prior = "prior_lang.cli:main"

[tool.setuptools.packages.find]
include = ["prior_lang*"]
